# embedded_byteorder

./: .coderabbit.yaml  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: release-plz.yml
src/: eio.rs  eio_async.rs  lib.rs
tests/: eio_async_compat.rs  eio_compat.rs
