[package]
name = "byteorder-embedded-io"
version = "0.1.0"
authors = ["Zach Heylmun <zach@heylmun.com>"]
description = "Extension of byteorder with embedded-io Read/Write trait support for no_std environments."
homepage = "https://github.com/zheylmun/byteorder-embedded-io"
repository = "https://github.com/zheylmun/byteorder-embedded-io"
readme = "README.md"
categories = ["encoding", "parsing", "no-std", "embedded"]
keywords = ["byte", "endian", "big-endian", "little-endian", "embedded"]
license = "Unlicense OR MIT"
edition = "2021"
rust-version = "1.60"

[lib]
name = "byteorder_embedded_io"

[dependencies]
byteorder = { version = "1", default-features = false }
embedded-io = { version = "0.7", default-features = false, optional = true }
embedded-io-async = { version = "0.7", default-features = false, optional = true }

[dev-dependencies]
quickcheck = { version = "0.9.2", default-features = false }
rand = "0.7"
embedded-io-adapters = { version = "0.7", features = ["std", "tokio-1"] }
tokio = { version = "1", features = ["io-util", "macros", "rt"] }

[features]
default = []
std = ["byteorder/std"]
embedded-io = ["dep:embedded-io"]
embedded-io-async = ["dep:embedded-io-async", "embedded-io"]
